<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.scanny_project.features.login.LoginActivity">


    <ImageView
        android:id="@+id/ivScanny"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="-122dp"
        android:paddingTop="130dp"
        android:scaleType="centerCrop"
        android:src="@drawable/scanny_for_main"
        android:translationY="16dp"
        app:layout_constraintBottom_toTopOf="@id/cvInputs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_login_gradient"
            android:orientation="vertical"
            android:padding="15dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="35dp"
                app:cardCornerRadius="32dp"
                app:cardElevation="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/ivScanny">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="Username"
                    android:background="@null"
                    android:backgroundTint="@android:color/black"
                    android:hint="@string/username"
                    android:inputType="text"
                    android:padding="10dp"
                    android:selectAllOnFocus="true"
                    android:textSize="20sp" />
            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="35dp"
                android:layout_marginHorizontal="10dp"
                app:cardCornerRadius="32dp"
                app:cardElevation="8dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/prompt_password"
                    android:background="@null"
                    android:backgroundTint="@android:color/black"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:selectAllOnFocus="true"
                    android:textSize="20sp" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:background="@drawable/bg_login_button"
                android:elevation="15dp"
                android:fontFamily="sans-serif-black"
                android:paddingVertical="16dp"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:layout_marginBottom="35dp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/dark_blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvInputs" />


</androidx.constraintlayout.widget.ConstraintLayout>