<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/light_blue"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <ImageView
                android:id="@+id/imUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:contentDescription="@string/bottom_sheet_description"
                android:src="@drawable/ic_arrow_up_bubble"
                app:srcCompat="@drawable/ic_arrow_up_bubble" />
        </RelativeLayout>


     <!--   <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inference_time_label"
                android:text="@string/label_interence_time"
                android:textColor="@color/dark_blue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textSize="@dimen/bottom_sheet_text_size" />
             <TextView
                android:id="@+id/inference_time_val"
                android:text="0ms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_centerVertical="true"
                android:textColor="@color/dark_blue"
                android:textSize="@dimen/bottom_sheet_text_size" />
        </androidx.appcompat.widget.LinearLayoutCompat>-->


     <!--   <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_confidence_threshold"
                android:layout_centerVertical="true"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textColor="@color/dark_blue" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/threshold_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/minus"
            android:background="@android:color/transparent"
            android:contentDescription="@string/bottom_sheet_button_minus"/>

                <TextView
                    android:id="@+id/threshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:minEms="3"
                    android:text="0.50"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threshold_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/light_blue"
                    android:contentDescription="@string/bottom_sheet_button_plus"
                    android:src="@drawable/plus" />
            </LinearLayout>
        </RelativeLayout>-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_max_results"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_centerVertical="true"
                android:textColor="@color/dark_blue" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/max_results_minus"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/light_blue"
            android:contentDescription="@string/alt_bottom_sheet_max_results_button_minus"
            android:src="@drawable/minus" />

                <TextView
                    android:id="@+id/max_results_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minEms="3"
                    android:gravity="center"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/one"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/max_results_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@color/light_blue"
                    android:contentDescription="@string/alt_bottom_sheet_max_results_button_plus"
                    android:src="@drawable/plus" />
            </LinearLayout>
        </RelativeLayout>

      <!--  <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_threads"
                android:layout_centerVertical="true"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textColor="@color/dark_blue" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                >

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threads_minus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/bottom_sheet_thread_button_minus"
                    android:src="@drawable/minus" />

                <TextView
                    android:id="@+id/threads_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:minEms="3"
                    android:text="2"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/bottom_sheet_text_size" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/threads_plus"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/alt_bottom_sheet_thread_button_plus"
                    android:src="@drawable/plus"  />
            </LinearLayout>
        </RelativeLayout>-->

      <!--  <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:text="@string/label_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textColor="@color/dark_blue" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_delegate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="240dp"
                android:spinnerMode="dropdown"
                android:theme="@style/BottomSheetSpinnerItemStyle"
                android:layout_alignParentRight="true"
                android:entries="@array/delegate_spinner_titles"/>

        </RelativeLayout>-->

      <!--  <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:text="@string/label_models"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_sheet_text_size"
                android:textColor="@color/dark_blue" />
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="240dp"
                android:spinnerMode="dropdown"
                android:theme="@style/BottomSheetSpinnerItemStyle"
                android:layout_alignParentRight="true"
                android:entries="@array/models_spinner_titles"/>

        </RelativeLayout>-->
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>